fix: update style to fix cut off ui description post card

--- a/app/src/sections/Community/PostCardList/styles.css
+++ b/app/src/sections/Community/PostCardList/styles.css
@@ -7,6 +7,7 @@
 
 .community-post-card-group .post-card {
   margin-bottom: 20px;
+  display: inline-block;
 }
 
 @media (min-width: 768px) {
